--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <a href="https://twitter.com/codingdrizzle" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
         <a href="https://wa.link/qebakg" class="whatsapp" target="_blank"><i class="bx bxl-whatsapp"></i></a>
         <a href="https://github.com/codingdrizzle" class="github" target="_blank"><i class="bx bxl-github"></i></a>
-        <a href="https://www.linkedin.com/in/francis-buabin-owusu-a5874416a" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/codingdrizzle" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -128,40 +128,31 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-4 col-md-6">
             <div class="count-box">
-              <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Happy Clients</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
-            <div class="count-box">
-              <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
+              <i class="bi bi-tools"></i>
+              <span data-purecounter-start="0" data-purecounter-end="12" data-purecounter-duration="1" class="purecounter"></span>
               <p>Projects</p>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+          <div class="col-lg-4 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
-              <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Hours Of Support</p>
+              <i class="bi bi-journal-richtext"></i>
+              <span data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Certificates</p>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+          <div class="col-lg-4 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
-              <i class="bi bi-award"></i>
-              <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Awards</p>
+              <i class="bi bi-bookmark-check"></i>
+              <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Recommendations</p>
             </div>
           </div>
 
@@ -245,9 +236,17 @@
           <h2>Resume</h2>
         </div>
 
-        <div class="myCv">
-          
-        </div>
+        <a
+                  class="myCv btn btn-lg smooth-scroll brand i"
+                  href="./cv/Francis B. Owusu (CV).pdf"
+                  download="Francis B. Owusu (CV)"
+                  data-aos="zoom-in"
+                  data-aos-anchor="data-aos-anchor"
+                  style="font-size: 20px"
+                  >
+                  <i class="fa fa-file mr-2" style="font-size: 30px"></i>
+                  Download my Resume - Francis Buabin Owusu _ (CV)
+      </a>
 
       </div>
     </section><!-- End Resume Section -->
@@ -271,7 +270,7 @@
                 <p>Website</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="portfolio-details.html#quiz-app" target="_blank"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -285,7 +284,7 @@
                 <p>Website</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="portfolio-details.html#madina-app" target="_blank"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -299,7 +298,7 @@
                 <p>Website</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="portfolio-details.html#chapel-app" target="_blank"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -313,7 +312,7 @@
                 <p>Website</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-4.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="portfolio-details.html#luvuyo-app" target="_blank"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -321,13 +320,13 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.PNG" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-5.JPG" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>GEMS Complaint</h4>
                 <p>Website</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-5.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-5.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html#gems-app" target="_blank"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -497,7 +496,7 @@
         <a href="https://twitter.com/codingdrizzle" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
         <a href="https://wa.link/qebakg" class="whatsapp" target="_blank"><i class="bx bxl-whatsapp"></i></a>
         <a href="https://github.com/codingdrizzle" class="github" target="_blank"><i class="bx bxl-github"></i></a>
-        <a href="https://www.linkedin.com/in/francis-buabin-owusu-a5874416a" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/codingdrizzle" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>codingdrizzle</span></strong>. All Rights Reserved.
