--- a/index.html
+++ b/index.html
@@ -237,7 +237,8 @@
         </div>
 
         <a
-                  class="myCv btn btn-lg smooth-scroll brand i"
+                  id="myCv"
+                  class="btn btn-lg smooth-scroll brand i"
                   href="./cv/Francis B. Owusu (CV).pdf"
                   download="Francis B. Owusu (CV)"
                   data-aos="zoom-in"
