added a new portfolio

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -240,6 +240,42 @@
           </div>
 
         </div>
+        <div class="row gy-4 mt-4" id="globine-tour">
+          <div class="col-lg-8">
+            <div class="portfolio-details-slider swiper">
+              <div class="swiper-wrapper align-items-center">
+
+                <div class="swiper-slide">
+                  <img src="assets/img/globine1.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/globine2.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/globine3.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/globine4.png" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="portfolio-info">
+              <h3>Globine Tour</h3>
+              <ul>
+                <li><strong>Category</strong>: Web design</li>
+                <li><strong>Type</strong>: Personal Project</li>
+                <li><strong>Toolkits</strong>: ReactJs</li>
+                <li><strong>Project URL</strong>: <a href="https://globine.onrender.com/">globine.onrender.com</a></li>
+              </ul>
+            </div>
+            <div class="portfolio-description">
+              <h3>Details</h3>
+              <p>Website to filter all countries in the world with some pretty cool description of each country. Country Info | Time Zone | Weather Forecast</p>
+            </div>
+          </div>
+        </div>
 
       </div>
     </section><!-- End Portfolio Details Section -->
