--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-  <title>codingdrizzle - portfolio</title>
+  <title>hello i am the new collaborator</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
